# jf_wep

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: test_mapping.ipynb  test_tie.ipynb  test_wfEstimator.ipynb  test_wfsim.ipynb  zernike_posters.ipynb
policy/: imageMapper.yaml  wfEstimator.yaml  zernikeObject.yaml
policy/instruments/: AuxTel.yaml  AuxTelZWO.yaml  ComCam.yaml  LsstCam.yaml  LsstFamCam.yaml
policy/utils/: imageMapper.yaml
policy/wfAlgorithms/: danish.yaml  tie.yaml
src/jf_wep/: donutImage.py  donutStamp.py  imageMapper.py  instrument.py  wfEstimator.py  zernikeObject.py
src/jf_wep/utils/: __init__.py  centering.py  enums.py  imageMapper.py  paramReaders.py  polygonContains.py  tieOffAxisPolynomialFitter.py  zernikes.py
src/jf_wep/wfAlgorithms/: danish.py  tie.py  wfAlgorithm.py  wfAlgorithmFactory.py
tests/: test_donutImage.py  test_instrument.py  test_wfEstimator.py
tests/wfAlgorithms/: test_tie.py
